tests/baselines/reference/orderMattersForSignatureGroupIdentity.errors.txt
tests/cases/compiler/orderMattersForSignatureGroupIdentity.ts(19,1): error TS2755: No overload matches this call.
tests/cases/compiler/orderMattersForSignatureGroupIdentity.ts(22,5): error TS2403: Subsequent variable declarations must have the same type.  Variable 'w' must be of type 'A', but here has type 'C'.
tests/cases/compiler/orderMattersForSignatureGroupIdentity.ts(24,1): error TS2755: No overload matches this call.


==== tests/cases/compiler/orderMattersForSignatureGroupIdentity.ts (3 errors) ====
    interface A {
        (x: { s: string }): string
        (x: { n: number }): number
    }
    
    interface B {
        (x: { s: string }): string
        (x: { n: number }): number
    }
    
    interface C {
        (x: { n: number }): number
        (x: { s: string }): string
    }
    
    var v: A;
    var v: B;
    
    v({ s: "", n: 0 }).toLowerCase();
    ~~~~~~~~~~~~~~~~~~
!!! error TS2755: No overload matches this call.
!!! related TS2760 tests/cases/compiler/orderMattersForSignatureGroupIdentity.ts:19:12: Overload 1 of 2, '(x: { s: string; }): string', gave the following error.
  Argument of type '{ s: string; n: number; }' is not assignable to parameter of type '{ s: string; }'.
    Object literal may only specify known properties, and 'n' does not exist in type '{ s: string; }'.
!!! related TS2760 tests/cases/compiler/orderMattersForSignatureGroupIdentity.ts:19:5: Overload 2 of 2, '(x: { n: number; }): number', gave the following error.
  Argument of type '{ s: string; n: number; }' is not assignable to parameter of type '{ n: number; }'.
    Object literal may only specify known properties, and 's' does not exist in type '{ n: number; }'.
    
    var w: A;
    var w: C;
        ~
!!! error TS2403: Subsequent variable declarations must have the same type.  Variable 'w' must be of type 'A', but here has type 'C'.
!!! related TS6203 tests/cases/compiler/orderMattersForSignatureGroupIdentity.ts:21:5: 'w' was also declared here.
    
    w({ s: "", n: 0 }).toLowerCase();
    ~~~~~~~~~~~~~~~~~~
!!! error TS2755: No overload matches this call.
!!! related TS2760 tests/cases/compiler/orderMattersForSignatureGroupIdentity.ts:24:12: Overload 1 of 2, '(x: { s: string; }): string', gave the following error.
  Argument of type '{ s: string; n: number; }' is not assignable to parameter of type '{ s: string; }'.
    Object literal may only specify known properties, and 'n' does not exist in type '{ s: string; }'.
!!! related TS2760 tests/cases/compiler/orderMattersForSignatureGroupIdentity.ts:24:5: Overload 2 of 2, '(x: { n: number; }): number', gave the following error.
  Argument of type '{ s: string; n: number; }' is not assignable to parameter of type '{ n: number; }'.
    Object literal may only specify known properties, and 's' does not exist in type '{ n: number; }'.